# x-fetch

./: .gitignore  Design.md  GEMINI.md  Initial Prompt.md  README.md  SKILL.md  pyproject.toml
src/x_fetch/: cli.py  scraper.py
tests/: test_cli.py  test_scraper.py
